# board-matrix-grid

./: Makefile  README.rst  TODO.rst  cookiebaked.json  freezer.py  setup.cfg  sphinx_reload.py
board_matrix_grid/: __init__.py  constants.py  exceptions.py  matrix.py
board_matrix_grid/models/: __init__.py  board.py  cell.py  row.py  tile.py
docs/: conf.py  development.rst  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py
docs/references/: constants.rst  exceptions.rst  index.rst  logger.rst  models.rst
tests/: 0001_matrix.py  0010_tile.py  0020_cell.py  0030_row.py  0040_board.py  conftest.py
