;;
;; Board matrix grid package
;;
[metadata]
name = board-matrix-grid
version = 0.2.0-pre.1
description = A library to manage a grid for board game
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/board-matrix-grid
project_urls =
    Source Code = https://github.com/sveetch/board-matrix-grid
    Issue Tracker = https://github.com/sveetch/board-matrix-grid/issues
    Changelog = https://board-matrix-grid.readthedocs.io/en/latest/history.html
    Documentation = https://board-matrix-grid.readthedocs.io/
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
install_requires =
    colorlog
    colorama
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
quality =
    flake8
    tox
    twine
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests


[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,310}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
